# edu-gachon2026-project

projects/team06-triproute/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  project.yml  pyproject.toml
projects/team06-triproute/.github/workflows/: cd.yml  ci.yml
projects/team06-triproute/app/: main.py
projects/team06-triproute/app/agents/: coordinator.py  financial.py  react_loop.py  route_planner.py
projects/team06-triproute/app/core/: config.py  prompts.py  state.py
projects/team06-triproute/app/graph/: checkpointer.py  edges.py  nodes.py  workflow.py
projects/team06-triproute/app/rag/: embedder.py  retriever.py  vector_store.py
projects/team06-triproute/app/schemas/: place.py  request.py  response.py
projects/team06-triproute/app/services/: auth_client.py  chat_store.py  google_places_api.py  kakao_mobility.py  solar.py  supabase_client.py  tour_api.py  upstage_client.py
projects/team06-triproute/docs/: api_notes.md  architecture.md  langgraph_workflow.md  project_plan.md  session_2026-07-13_summary.md  session_2026-07-14_summary.md  session_2026-07-15_summary.md  state_design.md  step3_agent_report.md  tech_architecture.md  ui_claude_design_spec.md
projects/team06-triproute/scripts/: resume_seoul_and_backfill.py  run_backfill_coordinates.py
projects/team06-triproute/tests/: test_auth_client.py  test_chat_store.py  test_checkpointer.py  test_financial.py  test_formatter.py  test_react_loop.py  test_route_planner.py  test_solar_parser.py
projects/team06-triproute/ui/: gradio_app.py
(+11 files in other folders)
