[project]
name = "triproute"
version = "0.1.0"
description = "TripRoute: Agentic Workflow 여행 일정 생성 MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langfuse>=4.13.2",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
